// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ranking golden (representative queries) > produces stable top-N ordering per scenario 1`] = `
{
  "broad-generic": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "indusind-eazydiner",
    "kotak-solitaire",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "amex-platinum-travel",
    "bobcard-etihad-guest-premium",
  ],
  "category-bill-payments": [
    "icici-emeralde-private-metal",
    "phonepe-sbi-select-black",
    "sc-ultimate",
    "hdfc-phonepe-ultimo",
    "amex-gold",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "sbi-card-prime",
    "axis-ace",
    "sbi-card-pulse",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
  ],
  "category-education-payments": [
    "icici-emeralde-private-metal",
    "hsbc-premier",
    "amex-membership-rewards",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "amex-gold",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "amex-platinum-travel",
    "indusind-eazydiner-platinum",
    "sbi-card-pulse",
    "hdfc-marriott-bonvoy",
  ],
  "category-rent": [
    "hsbc-premier",
    "amex-platinum-travel",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "axis-magnus",
    "sc-beyond",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "amex-platinum-travel",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "axis-magnus",
    "sc-beyond",
  ],
  "category-utilities": [
    "icici-emeralde-private-metal",
    "phonepe-sbi-select-black",
    "sc-ultimate",
    "hdfc-phonepe-ultimo",
    "amex-gold",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "sbi-card-prime",
    "axis-ace",
    "sbi-card-pulse",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
  ],
  "category-utility-bills": [
    "icici-emeralde-private-metal",
    "phonepe-sbi-select-black",
    "sc-ultimate",
    "hdfc-phonepe-ultimo",
    "amex-gold",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "sbi-card-prime",
    "axis-ace",
    "sbi-card-pulse",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
  ],
  "combo-dining-under-5000": [
    "indusind-eazydiner",
    "indusind-eazydiner-platinum",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-orange",
    "bobcard-eterna",
    "yes-paisabazaar-paisasave",
    "hdfc-swiggy-black",
    "yes-first-preferred",
    "landmark-rewards-sbi-prime",
    "sbi-card-prime",
    "equitas-selfe",
  ],
  "combo-premium-travel": [
    "hsbc-travelone",
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "hdfc-regalia-gold",
    "icici-adani-one-signature",
    "axis-horizon",
    "indigo-sbi-elite",
    "hdfc-marriott-bonvoy",
    "bobcard-etihad-guest",
    "bobcard-eterna",
    "sbi-card-miles-elite",
    "indusind-eazydiner",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-airtel",
    "axis-magnus-burgundy",
    "axis-magnus",
    "axis-ace",
    "axis-horizon",
    "axis-indigo-premium",
    "axis-fibe",
    "axis-privilege-easy",
    "axis-rewards",
    "axis-flipkart",
    "axis-privilege",
  ],
  "forex": [
    "bobcard-etihad-guest-premium",
    "idfc-wow",
    "scapia-federal",
    "scapia-bobcard",
    "au-ixigo",
    "kotak-solitaire",
    "idfc-mayura",
    "rbl-world-safari",
    "hsbc-premier",
    "bobcard-etihad-guest",
    "idfc-ashva",
    "icici-makemytrip",
  ],
  "forex-zero": [
    "bobcard-etihad-guest-premium",
    "scapia-federal",
    "scapia-bobcard",
    "kotak-solitaire",
    "idfc-wow",
    "idfc-mayura",
    "au-ixigo",
    "rbl-world-safari",
    "indusind-pioneer-heritage-metal",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus-burgundy",
    "axis-reserve",
    "axis-magnus",
    "yes-marquee",
    "sc-beyond",
    "idfc-mayura",
  ],
  "intl-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "yes-marquee",
    "axis-magnus",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-reserve",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-times-black",
    "aurum-sbi",
    "sc-beyond",
  ],
  "issuer-amex": [
    "amex-platinum-travel",
    "amex-membership-rewards",
    "amex-gold",
    "amex-smartearn",
    "amex-platinum-reserve",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-flipkart-super-elite",
    "axis-magnus",
    "axis-horizon",
    "axis-indigo-premium",
    "axis-privilege-easy",
    "axis-privilege",
    "axis-miles-and-more",
    "axis-kwik",
    "axis-rewards",
    "axis-indigo",
  ],
  "issuer-hdfc": [
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
    "hdfc-shoppers-stop-black",
    "hdfc-tata-neu-infinity",
    "hdfc-irctc",
    "hdfc-tata-neu-plus",
    "hdfc-moneyback-plus",
    "hdfc-shoppers-stop",
    "hdfc-indianoil",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-times-black",
    "icici-adani-one-signature",
    "icici-adani-one-platinum",
    "icici-coral-rupay",
    "icici-makemytrip",
    "icici-coral",
    "icici-sapphiro",
    "icici-rubyx",
    "icici-sapphiro-rupay",
    "icici-platinum-chip",
    "icici-emeralde",
  ],
  "issuer-sbi": [
    "krisflyer-sbi-apex",
    "indigo-sbi-elite",
    "tata-neu-infinity-sbi",
    "sbi-card-prime",
    "sbi-card-elite",
    "reliance-sbi-prime",
    "sbi-card-miles-prime",
    "irctc-rupay-sbi",
    "aurum-sbi",
    "landmark-rewards-sbi-prime",
    "tata-neu-plus-sbi",
    "shaurya-select-sbi",
  ],
  "lifetime-free": [
    "au-ixigo",
    "hsbc-visa-platinum",
    "indusind-eazydiner-platinum",
    "indusind-tiger",
    "hsbc-rupay-platinum",
    "federal-imperio",
    "axis-kwik",
    "federal-signet",
    "idfc-first-wealth",
    "indusind-legend",
    "idfc-first-select",
    "yes-kiwi",
  ],
  "lounge": [
    "hsbc-premier",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-reserve",
    "axis-magnus-burgundy",
    "axis-magnus",
    "yes-marquee",
    "sc-beyond",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-times-black",
    "amex-platinum",
  ],
  "lounge-query": [
    "hsbc-premier",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus-burgundy",
    "axis-reserve",
    "axis-magnus",
    "yes-marquee",
    "sc-beyond",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-times-black",
    "amex-platinum",
  ],
  "max-fee-5000-query": [
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "indusind-eazydiner",
    "kotak-solitaire",
    "equitas-selfe",
    "sc-ultimate",
    "bobcard-etihad-guest-premium",
    "amex-platinum-travel",
    "amex-membership-rewards",
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
    "amex-gold",
  ],
  "max-fee-zero": [
    "kotak-solitaire",
    "au-ixigo",
    "hsbc-visa-platinum",
    "kotak-infinite",
    "indusind-eazydiner-platinum",
    "indusind-tiger",
    "hsbc-rupay-platinum",
    "sc-priority-visa-infinite",
    "federal-imperio",
    "axis-kwik",
    "federal-signet",
    "idfc-first-wealth",
  ],
  "merchant-amazon": [
    "icici-amazon-pay",
    "cheq-au",
    "hdfc-moneyback-plus",
    "amex-smartearn",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "flipkart-sbi",
    "axis-flipkart",
    "axis-samsung-signature",
    "cheq-au",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "hdfc-swiggy",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hdfc-diners-club-privilege",
    "axis-fibe",
    "hsbc-live-plus",
    "axis-rewards",
    "axis-ace",
    "hsbc-rupay-cashback",
    "axis-select",
    "axis-my-zone",
    "axis-airtel",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "sbi-card-elite",
    "sbi-card-prime",
    "indigo-sbi-elite",
    "sbi-cashback",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "axis-airtel",
    "yes-reserv",
  ],
  "network-rupay": [
    "au-ixigo",
    "yes-kiwi",
    "indigo-sbi-elite",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "phonepe-sbi-select-black",
    "indigo-sbi",
    "reliance-sbi-prime",
    "sbi-card-miles",
    "hdfc-tata-neu-infinity",
    "hdfc-shoppers-stop",
  ],
  "network-visa": [
    "hsbc-visa-platinum",
    "sc-priority-visa-infinite",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "hdfc-regalia-gold",
    "phonepe-sbi-select-black",
    "kotak-solitaire",
    "hdfc-shoppers-stop-black",
    "bobcard-eterna",
    "bobcard-etihad-guest-premium",
    "au-ixigo",
  ],
  "segment-beginner": [
    "phonepe-sbi-select-black",
    "au-ixigo",
    "indusind-eazydiner-platinum",
    "hsbc-live-plus",
    "hdfc-diners-club-privilege",
    "axis-airtel",
    "hdfc-swiggy-orange",
    "sbi-cashback",
    "yes-kiwi",
    "hdfc-swiggy-black",
    "amex-smartearn",
    "tata-neu-infinity-sbi",
  ],
  "segment-mid-premium": [
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "indusind-eazydiner",
    "yes-marquee",
    "amex-platinum-travel",
    "sc-ultimate",
    "equitas-powermiles",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "amex-membership-rewards",
    "indigo-sbi-elite",
  ],
  "segment-premium": [
    "bobcard-etihad-guest-premium",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-indigo-premium",
    "indusind-eazydiner",
    "amex-platinum-travel",
    "yes-marquee",
    "sc-ultimate",
    "equitas-powermiles",
    "hdfc-marriott-bonvoy",
    "amex-membership-rewards",
    "bobcard-eterna",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "kotak-white-reserve",
    "sc-beyond",
    "krisflyer-sbi-apex",
    "aurum-sbi",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "indusind-eazydiner",
    "amex-platinum-travel",
    "kotak-solitaire",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "phonepe-sbi-select-black",
  ],
  "spend-high-base": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "kotak-solitaire",
    "axis-magnus",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "icici-times-black",
    "yes-marquee",
    "kotak-white-reserve",
  ],
  "spend-international": [
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "sc-ultimate",
    "amex-membership-rewards",
    "bobcard-etihad-guest-premium",
    "hsbc-premier",
    "bobcard-eterna",
    "hdfc-infinia-metal",
    "amex-gold",
    "bobcard-premier",
    "equitas-powermiles",
    "tata-neu-infinity-sbi",
  ],
  "spend-level-heavy": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "yes-marquee",
    "axis-magnus",
    "sc-ultimate",
    "icici-times-black",
  ],
  "spend-level-light": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "indusind-eazydiner",
    "kotak-solitaire",
    "sc-ultimate",
    "amex-membership-rewards",
    "amex-platinum-travel",
    "bobcard-etihad-guest-premium",
  ],
  "spend-level-mid": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "kotak-solitaire",
    "indusind-eazydiner",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "bobcard-etihad-guest-premium",
    "amex-platinum-travel",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "kotak-solitaire",
    "hdfc-regalia-gold",
    "axis-magnus",
    "sc-ultimate",
    "icici-times-black",
    "yes-marquee",
  ],
  "usecase-cashback": [
    "phonepe-sbi-select-black",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-orange",
    "axis-airtel",
    "hdfc-phonepe-ultimo",
    "hdfc-swiggy-black",
    "sbi-cashback",
    "axis-ace",
    "hdfc-millennia",
    "titan-sbi",
    "axis-fibe",
  ],
  "usecase-dining": [
    "indusind-eazydiner",
    "indusind-eazydiner-platinum",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hsbc-rupay-cashback",
    "yes-paisabazaar-paisasave",
    "bobcard-eterna",
    "hdfc-marriott-bonvoy",
    "yes-first-preferred",
    "landmark-rewards-sbi-prime",
    "sbi-card-prime",
  ],
  "usecase-entertainment": [
    "indusind-eazydiner",
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
    "yes-marquee",
    "bobcard-eterna",
    "sbi-card-prime",
    "sbi-card-elite",
    "au-ixigo",
    "yes-reserv",
    "rbl-world-max",
    "yes-pop-club",
    "landmark-rewards-sbi-prime",
  ],
  "usecase-fuel": [
    "bpcl-sbi-octane",
    "idfc-first-power-plus",
    "axis-indianoil-easy",
    "kotak-cashback-plus",
    "bpcl-sbi",
    "axis-indianoil",
    "idfc-first-power",
    "hdfc-indianoil",
    "axis-indianoil-premium",
    "sc-platinum-rewards",
    "icici-hpcl-super-saver",
    "icici-hpcl-coral",
  ],
  "usecase-grocery": [
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "hdfc-swiggy-black",
    "bpcl-sbi-octane",
    "kotak-cashback-plus",
    "indusind-eazydiner",
    "phonepe-sbi-select-black",
    "sbi-card-prime",
    "hsbc-rupay-cashback",
    "equitas-selfe",
    "au-ixigo",
    "sbi-cashback",
  ],
  "usecase-online": [
    "phonepe-sbi-select-black",
    "sbi-cashback",
    "indusind-eazydiner",
    "csb-jupiter-edge-plus",
    "bobcard-eterna",
    "hdfc-pixel-play",
    "axis-cashback",
    "simplyclick-sbi",
    "phonepe-sbi-purple",
    "kotak-cashback-plus",
    "yes-pop-club",
    "rbl-cookies",
  ],
  "usecase-travel": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "axis-magnus",
    "kotak-solitaire",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "icici-adani-one-signature",
    "hsbc-visa-platinum",
  ],
  "usecase-upi": [
    "au-ixigo",
    "yes-kiwi",
    "indigo-sbi-elite",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "phonepe-sbi-select-black",
    "indigo-sbi",
    "reliance-sbi-prime",
    "sbi-card-miles",
    "hdfc-tata-neu-infinity",
    "hdfc-shoppers-stop",
  ],
}
`;

exports[`result split golden (all query modes) > snapshots section membership for every representative query under reward-type-split 1`] = `
{
  "broad-generic": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "au-ixigo",
      "hsbc-live-plus",
      "yes-kiwi",
      "hdfc-swiggy-orange",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "category-bill-payments": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hsbc-premier",
      "hdfc-infinia-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-regalia-gold",
    ],
  },
  "category-education-payments": {
    "Cashback cards": [
      "hdfc-millennia",
      "titan-sbi",
      "hdfc-swiggy-black",
      "hdfc-pixel-play",
      "hdfc-pixel-go",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-infinia-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-regalia-gold",
      "icici-emeralde-private-metal",
    ],
  },
  "category-rent": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "amex-platinum-travel",
      "sc-ultimate",
      "axis-magnus",
      "axis-magnus-burgundy",
      "sc-beyond",
    ],
  },
  "category-rent-payment": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "amex-platinum-travel",
      "sc-ultimate",
      "axis-magnus",
      "axis-magnus-burgundy",
      "sc-beyond",
    ],
  },
  "category-utilities": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hsbc-premier",
      "hdfc-infinia-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-regalia-gold",
    ],
  },
  "category-utility-bills": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hsbc-premier",
      "hdfc-infinia-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-regalia-gold",
    ],
  },
  "combo-dining-under-5000": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "yes-paisabazaar-paisasave",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "bpcl-sbi-octane",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "indusind-eazydiner",
      "sbi-card-elite",
      "hdfc-marriott-bonvoy",
      "rbl-platinum-maxima-plus",
    ],
  },
  "combo-premium-travel": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-travelone",
      "bobcard-etihad-guest-premium",
      "axis-indigo-premium",
      "hdfc-regalia-gold",
      "icici-adani-one-signature",
      "axis-horizon",
      "indigo-sbi-elite",
      "bobcard-etihad-guest",
      "sbi-card-miles-elite",
      "hdfc-marriott-bonvoy",
    ],
  },
  "exact-card-atlas": {
    "Cashback cards": [
      "axis-airtel",
      "axis-ace",
      "axis-fibe",
      "axis-samsung-signature",
      "axis-flipkart",
    ],
    "Rewards cards": [
      "axis-atlas",
      "axis-magnus-burgundy",
      "axis-magnus",
      "axis-horizon",
      "axis-indigo-premium",
    ],
  },
  "forex": {
    "Cashback cards": [
      "csb-jupiter-edge-plus",
      "icici-amazon-pay",
    ],
    "Rewards cards": [
      "bobcard-etihad-guest-premium",
      "idfc-mayura",
      "au-ixigo",
      "hsbc-premier",
      "idfc-wow",
      "rbl-world-safari",
      "scapia-federal",
    ],
  },
  "forex-zero": {
    "Cashback cards": [],
    "Rewards cards": [
      "bobcard-etihad-guest-premium",
      "idfc-mayura",
      "au-ixigo",
      "scapia-federal",
      "scapia-bobcard",
      "idfc-wow",
      "rbl-world-safari",
      "kotak-solitaire",
      "indusind-pioneer-heritage-metal",
    ],
  },
  "guest-lounge-query": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-magnus-burgundy",
      "axis-reserve",
      "axis-magnus",
      "yes-marquee",
      "sc-beyond",
      "idfc-mayura",
    ],
  },
  "intl-lounge-query": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "au-ixigo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "yes-marquee",
      "axis-magnus",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-reserve",
    ],
  },
  "issuer-amex": {
    "Cashback cards": [],
    "Rewards cards": [
      "amex-platinum-travel",
      "amex-membership-rewards",
      "amex-gold",
      "amex-smartearn",
      "amex-platinum-reserve",
      "amex-platinum",
    ],
  },
  "issuer-axis": {
    "Cashback cards": [
      "axis-airtel",
      "axis-ace",
      "axis-fibe",
      "axis-samsung-signature",
      "axis-flipkart",
    ],
    "Rewards cards": [
      "axis-atlas",
      "axis-magnus-burgundy",
      "axis-flipkart-super-elite",
      "axis-magnus",
      "axis-horizon",
    ],
  },
  "issuer-hdfc": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hdfc-phonepe-ultimo",
      "hdfc-millennia",
    ],
    "Rewards cards": [
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "hdfc-diners-club-privilege",
      "hdfc-marriott-bonvoy",
    ],
  },
  "issuer-icici": {
    "Cashback cards": [
      "icici-amazon-pay",
      "icici-hpcl-super-saver",
      "icici-hpcl-coral",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "icici-times-black",
      "icici-adani-one-signature",
      "icici-adani-one-platinum",
      "icici-coral-rupay",
      "icici-makemytrip",
      "icici-coral",
    ],
  },
  "issuer-sbi": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "phonepe-sbi-purple",
      "bpcl-sbi-octane",
      "titan-sbi",
    ],
    "Rewards cards": [
      "krisflyer-sbi-apex",
      "indigo-sbi-elite",
      "tata-neu-infinity-sbi",
      "sbi-card-prime",
      "sbi-card-elite",
    ],
  },
  "lifetime-free": {
    "Cashback cards": [
      "au-ixigo",
      "yes-kiwi",
      "csb-jupiter-edge-plus",
      "axis-fibe",
      "yes-paisabazaar-paisasave-rupay",
    ],
    "Rewards cards": [
      "au-ixigo",
      "hsbc-visa-platinum",
      "indusind-eazydiner-platinum",
      "indusind-tiger",
      "hsbc-rupay-platinum",
    ],
  },
  "lounge": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "au-ixigo",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-reserve",
      "axis-magnus-burgundy",
    ],
  },
  "lounge-query": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "au-ixigo",
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-magnus-burgundy",
      "axis-reserve",
    ],
  },
  "max-fee-5000-query": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "au-ixigo",
      "hsbc-live-plus",
      "yes-kiwi",
      "hdfc-swiggy-orange",
    ],
    "Rewards cards": [
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "indusind-eazydiner",
      "kotak-solitaire",
      "sc-ultimate",
    ],
  },
  "max-fee-zero": {
    "Cashback cards": [
      "au-ixigo",
      "yes-kiwi",
      "csb-jupiter-edge-plus",
      "axis-fibe",
      "icici-amazon-pay",
    ],
    "Rewards cards": [
      "kotak-solitaire",
      "au-ixigo",
      "hsbc-visa-platinum",
      "kotak-infinite",
      "indusind-eazydiner-platinum",
    ],
  },
  "merchant-amazon": {
    "Cashback cards": [
      "icici-amazon-pay",
      "cheq-au",
    ],
    "Rewards cards": [
      "hdfc-moneyback-plus",
      "amex-smartearn",
    ],
  },
  "merchant-flipkart": {
    "Cashback cards": [
      "flipkart-sbi",
      "axis-flipkart",
      "axis-samsung-signature",
      "cheq-au",
    ],
    "Rewards cards": [
      "axis-flipkart-super-elite",
      "cheq-au",
      "axis-neo",
    ],
  },
  "merchant-swiggy": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "axis-fibe",
    ],
    "Rewards cards": [
      "hdfc-diners-club-privilege",
      "axis-rewards",
      "axis-select",
      "axis-my-zone",
      "sc-digismart",
    ],
  },
  "network-mastercard": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "axis-airtel",
      "hdfc-swiggy-black",
      "sbi-cashback",
      "hdfc-millennia",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "sc-ultimate",
      "indigo-sbi-elite",
    ],
  },
  "network-rupay": {
    "Cashback cards": [
      "yes-kiwi",
      "phonepe-sbi-purple",
      "phonepe-sbi-select-black",
      "hsbc-rupay-cashback",
      "axis-fibe",
    ],
    "Rewards cards": [
      "au-ixigo",
      "indigo-sbi-elite",
      "yes-pop-club",
      "yes-reserv",
      "sbi-card-miles-prime",
    ],
  },
  "network-visa": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "sbi-cashback",
      "axis-ace",
      "phonepe-sbi-purple",
    ],
    "Rewards cards": [
      "hsbc-visa-platinum",
      "sc-priority-visa-infinite",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "segment-beginner": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "hdfc-swiggy-orange",
      "axis-airtel",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hdfc-diners-club-privilege",
      "tata-neu-infinity-sbi",
      "au-ixigo",
      "hsbc-visa-platinum",
    ],
  },
  "segment-mid-premium": {
    "Cashback cards": [
      "titan-sbi",
    ],
    "Rewards cards": [
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "indusind-eazydiner",
      "sc-ultimate",
      "bobcard-etihad-guest-premium",
      "yes-marquee",
      "amex-platinum-travel",
      "hdfc-marriott-bonvoy",
      "amex-membership-rewards",
    ],
  },
  "segment-premium": {
    "Cashback cards": [
      "titan-sbi",
    ],
    "Rewards cards": [
      "bobcard-etihad-guest-premium",
      "axis-indigo-premium",
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "indusind-eazydiner",
      "sc-ultimate",
      "amex-platinum-travel",
      "yes-marquee",
      "amex-membership-rewards",
    ],
  },
  "segment-super-premium": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "axis-magnus-burgundy",
      "kotak-solitaire",
      "axis-magnus",
      "icici-times-black",
      "kotak-white-reserve",
      "aurum-sbi",
    ],
  },
  "spend-fuel-heavy": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "axis-airtel",
      "hsbc-live-plus",
      "yes-kiwi",
      "hsbc-rupay-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
  "spend-high-base": {
    "Cashback cards": [
      "titan-sbi",
      "au-ixigo",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "axis-magnus-burgundy",
    ],
  },
  "spend-international": {
    "Cashback cards": [
      "au-ixigo",
      "csb-jupiter-edge-plus",
      "axis-ace",
      "sbm-paisabazaar-paisa-plus",
      "icici-amazon-pay",
    ],
    "Rewards cards": [
      "equitas-powermiles",
      "hsbc-premier",
      "bobcard-etihad-guest-premium",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
    ],
  },
  "spend-level-heavy": {
    "Cashback cards": [
      "au-ixigo",
      "hsbc-rupay-cashback",
      "phonepe-sbi-select-black",
      "titan-sbi",
      "hdfc-phonepe-ultimo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "spend-level-light": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "au-ixigo",
      "yes-kiwi",
      "hsbc-live-plus",
      "sbi-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "spend-level-mid": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hsbc-rupay-cashback",
      "hdfc-swiggy-orange",
      "hdfc-phonepe-ultimo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "spend-travel-heavy": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "au-ixigo",
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-diners-club-black-metal",
      "hsbc-travelone",
    ],
  },
  "usecase-cashback": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hsbc-rupay-cashback",
      "hdfc-swiggy-orange",
      "axis-airtel",
      "hdfc-phonepe-ultimo",
      "hdfc-swiggy-black",
      "sbi-cashback",
      "axis-ace",
    ],
    "Rewards cards": [
      "cheq-au",
    ],
  },
  "usecase-dining": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "yes-paisabazaar-paisasave",
      "hsbc-live-plus",
      "axis-fibe",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "indusind-eazydiner",
      "sbi-card-elite",
      "hdfc-marriott-bonvoy",
      "rbl-platinum-maxima-plus",
    ],
  },
  "usecase-entertainment": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "au-ixigo",
      "hsbc-rupay-cashback",
      "sbi-cashback",
    ],
    "Rewards cards": [
      "indusind-eazydiner",
      "hdfc-diners-club-privilege",
      "hdfc-marriott-bonvoy",
      "cheq-au",
      "yes-marquee",
    ],
  },
  "usecase-fuel": {
    "Cashback cards": [
      "bpcl-sbi-octane",
      "kotak-cashback-plus",
      "bpcl-sbi",
      "icici-hpcl-super-saver",
      "icici-hpcl-coral",
    ],
    "Rewards cards": [
      "idfc-first-power-plus",
      "sc-platinum-rewards",
      "idfc-indigo",
      "hdfc-indianoil",
      "axis-indianoil-premium",
    ],
  },
  "usecase-grocery": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "bpcl-sbi-octane",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "indusind-eazydiner",
      "sbi-card-elite",
      "rbl-platinum-maxima-plus",
      "sbi-card-prime",
    ],
  },
  "usecase-online": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "csb-jupiter-edge-plus",
      "hdfc-pixel-play",
      "axis-cashback",
    ],
    "Rewards cards": [
      "indusind-eazydiner",
      "yes-marquee",
      "bobcard-eterna",
      "yes-pop-club",
      "yes-reserv",
    ],
  },
  "usecase-travel": {
    "Cashback cards": [
      "axis-fibe",
      "apollo-sbi-select",
      "yes-paisabazaar-paisasave",
      "axis-ace",
      "cheq-au",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hsbc-travelone",
      "axis-magnus-burgundy",
      "hdfc-infinia-metal",
    ],
  },
  "usecase-upi": {
    "Cashback cards": [
      "yes-kiwi",
      "au-ixigo",
      "phonepe-sbi-purple",
      "phonepe-sbi-select-black",
      "hsbc-rupay-cashback",
    ],
    "Rewards cards": [
      "au-ixigo",
      "indigo-sbi-elite",
      "yes-pop-club",
      "yes-reserv",
      "sbi-card-miles-prime",
    ],
  },
}
`;

exports[`result split golden (reward-type-split) > snapshots the section membership and order for broad queries 1`] = `
{
  "broad-best-card": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "au-ixigo",
      "hsbc-live-plus",
      "yes-kiwi",
      "hdfc-swiggy-orange",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "category-online-split": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "csb-jupiter-edge-plus",
      "hdfc-pixel-play",
      "axis-cashback",
    ],
    "Rewards cards": [
      "indusind-eazydiner",
      "yes-marquee",
      "bobcard-eterna",
      "yes-pop-club",
      "yes-reserv",
    ],
  },
  "premium-degrade-single": {
    "Cashback cards": [
      "titan-sbi",
    ],
    "Rewards cards": [
      "bobcard-etihad-guest-premium",
      "axis-indigo-premium",
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "indusind-eazydiner",
      "sc-ultimate",
      "amex-platinum-travel",
      "yes-marquee",
      "amex-membership-rewards",
    ],
  },
  "seo-broad-best-cards": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "au-ixigo",
      "hsbc-live-plus",
      "yes-kiwi",
      "hdfc-swiggy-orange",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
}
`;
